 /* $Id: changelog,v 1.987 2000-06-13 21:27:44 sandervl Exp $ */

 2000-06-13: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:       Check if class already exists in RegisterClass(Ex)A/W
                    and return 0 (ERROR_CLASS_ALREADY_EXISTS) if true

 2000-06-12: Patrick Haller <phaller@gmx.net>
    - LZ32:         - updated to current WINE level (minor changes)

 2000-06-11: Patrick Haller <phaller@gmx.net>
    - KERNEL32:     - moved GetNumberFormat to different source file and enhanced
                      it a little (WinRAR shows file sizes)
                    - creating an existing directory does not return an error ?!
                    - updated GetStringTypeA/W and GetStringTypeExA/W

    - SHLWAPI:      Added a whole lot of missing functions, forwarders, stubs
                    Only 50 more to go for IE4 ...

 2000-06-09: Patrick Haller <phaller@gmx.net>
    - COMCTL32:     Added some missing stubs (.9 .10 .389 .390)
    - SHLWAPI:      Added numerous missing functions, some stubs
                    (.1 .2 .3 .4 .5 .6 .7 .8 .9 .10 .11 .12 .13 .14 .15 .16
                     .23 .28 .37 .38 .40 .43 .53 .56 .59 .60 .74 .83 .94 .95
                     .102 .116 .117 .158 .197 .240)

 2000-06-08: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32:     Fixed incorrect last error for OpenFile & LoadLibrary(Ex)
                    Added null pointer check to RegQueryValueW and fixed
                    memory leak.
    - USER32:       Ignore weird WM_ADJUSTWINDOWPOS messages (why are they sent?)
                    -> fixes combo box
                    Fixed GetUpdateRect
                    RedrawWindow changes; SetWindowPos fix (client invalidation)
                    Call MsgNCPaint in RedrawWindow (WM_NCPAINT is not posted
                    if update region doesn't include (part of) the nonclient area.
                    -> fixes RealPlayer 7 titlebar, borders & menu